@@ -20,6 +20,7 @@ class SkinMono extends SkinPHPTal {
 	function initPage( &$out ) {
 		SkinPHPTal::initPage( $out );
 		$this->skinname = 'mono';
+		$this->stylename = 'monobook';
 		$this->template = 'MonoBook';
 	}
 }
